<resources>
    <string name="app_name">Roselin</string>
    <string name="app_regular_name">Roselin α</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="hint_enter_a_message">今何してる？</string>
    <string name="now_loading">Loading…</string>
    <string name="hello">Hello!</string>
    <string name="my_profile">プロフィール</string>
    <string name="account">アカウント切り替え</string>
    <string name="mylist">マイリスト</string>
    <string name="setting">設定</string>
    <string name="whats_this_app">ヘルプ</string>
    <string name="what_is_happening">いまどうしてる？</string>
    <string name="title_activity_picture">PictureActivity</string>
    <string name="title_activity_user">UserActivity</string>
    <string name="title_activity_tweet_edit">TweetEditActivity</string>
    <string name="title_activity_twitter_detail">TwitterDetailActivity</string>
    <string name="title_activity_back_image">BackImageActivity</string>
    <string name="extension_description">未読ツイートやメンション、メッセージの数を更新時に表示します</string>
    <string name="menu_refresh">タイムラインを更新</string>
    <string name="menu_compose">新規ツイート</string>
    <string name="menu_logout">ログアウト</string>
    <string name="menu_settings">設定</string>
    <string name="menu_follow">フォロー</string>
    <string name="menu_unfollow">フォロー解除</string>
    <string name="menu_tweet">ツイートを送信</string>
    <string name="menu_dm">メッセージを送信</string>
    <string name="menu_block">ブロック</string>
    <string name="menu_unblock">ブロック解除</string>
    <string name="menu_add_to_list">リストに追加</string>
    <string name="menu_change_picture">プロフィール画像を変更</string>
    <string name="menu_change_bio">プロフィール情報を変更</string>
    <string name="menu_change_banner">ヘッダー画像を変更</string>
    <string name="menu_direct_message">新規メッセージ</string>
    <string name="menu_save_image">画像を保存</string>
    <string name="menu_favorite">お気に入り</string>
    <string name="menu_unfavorite">お気に入り解除</string>
    <string name="menu_create_list">新しいリストを作成</string>
    <string name="menu_spam">スパムとして報告</string>
    <string name="just_now">たった今</string>
    <string name="a_min_ago">1 分前</string>
    <string name="minutes_ago">%s 分前</string>
    <string name="an_hour_ago">1 時間前</string>
    <string name="hours_ago">%s 時間前</string>
    <string name="yesterday">昨日</string>
    <string name="days_ago">%s 日前</string>
    <string name="mute">ミュート</string>
    <string name="unmute">ミュート解除</string>
    <string name="muted_users">ミュートしたユーザー</string>
    <string name="no_users">ユーザーなし</string>
    <string name="links">リンク</string>
    <string name="pictures">画像</string>
    <string name="timeline">ホーム</string>
    <string name="mentions">/@ ツイート</string>
    <string name="direct_messages">メッセージ</string>
    <string name="retweets">リツイート</string>
    <string name="favorite_tweets">いいねしたツイート</string>
    <string name="favorite_users">お気に入りユーザー</string>
    <string name="favorite_users_tweets">お気に入りユーザーツイート</string>
    <string name="trends">トレンド</string>
    <string name="local_trends">地域</string>
    <string name="world_trends">ワールド</string>
    <string name="search">検索</string>
    <string name="lists">リスト</string>
    <string name="search_hint">検索…</string>
    <string name="new_tweet">件の新着ツイート</string>
    <string name="new_tweets">件の新着ツイート</string>
    <string name="no_new_tweets">新着ツイートなし</string>
    <string name="new_mention">件の新着 /@ ツイート</string>
    <string name="new_mentions">件の新着 /@ ツイート</string>
    <string name="no_new_mentions">新着 /@ ツイートなし</string>
    <string name="new_direct_message">件の新着メッセージ</string>
    <string name="new_direct_messages">件の新着メッセージ</string>
    <string name="no_new_direct_messages">新着メッセージなし</string>
    <string name="tap_to_setup">タップしてセットアップ</string>
    <string name="new_account">新規アカウント</string>
    <string name="from_top">上から</string>
    <string name="jump_to_top">先頭へ</string>
    <string name="all_read">全て既読！</string>
    <string name="view_new">読み込みますか？</string>
    <string name="old_interactions">全てのみんなの反応</string>
    <string name="tweet">ツイート</string>
    <string name="tweets">ツイート</string>
    <string name="mention">/@ ツイート</string>
    <string name="message">件のメッセージ</string>
    <string name="messages">件のメッセージ</string>
    <string name="new_message">件の新着メッセージ</string>
    <string name="new_messages">件の未読メッセージ</string>
    <string name="mentioned_by">/@ ツイート by</string>
    <string name="message_from">メッセージ from</string>
    <string name="mark_read">既読にする</string>
    <string name="noti_reply">返信</string>
    <string name="popup">ポップアップ</string>
    <string name="fav_user_tweets">件の新着お気に入りユーザーツイート</string>
    <string name="sec_acc">第 2 アカウント</string>
    <string name="listening">取得中</string>
    <string name="listening_for_mentions">みんなの反応を取得中</string>
    <string name="refreshing">更新中</string>
    <string name="refreshing_widget">ウィジェットを更新中</string>
    <string name="downloading">ダウンロード中</string>
    <string name="new_interaction_upper">新しいみんなの反応</string>
    <string name="new_interactions_lower">件の新しいみんなの反応</string>
    <string name="new_interactions">新しいみんなの反応</string>
    <string name="retweeted">がリツイートしました</string>
    <string name="favorited">がいいねしました</string>
    <string name="quoted">が引用しました</string>
    <string name="followed">がフォローしました</string>
    <string name="new_retweets">件のリツイート</string>
    <string name="new_favorites">件のいいね</string>
    <string name="new_quotes">引用RT数</string>
    <string name="new_tweets_upper">新着ツイート</string>
    <string name="login_to_twitter">Twitter にログイン</string>
    <string name="first_welcome">Talon へようこそ！</string>
    <string name="second_welcome">データを同期中</string>
    <string name="third_welcome">以上です - お楽しみください！</string>
    <string name="back_to_timeline">タイムラインへ移動！</string>
    <string name="initial_sync">今すぐ同期！</string>
    <string name="first_info">始める前に、Twitter にログインして同期しましょう</string>
    <string name="second_info">OK です！ 現在、 Twitter と接続して、あなたのアカウントを同期しています</string>
    <string name="third_info">どうぞ Talon をお楽しみください！</string>
    <string name="syncing_timeline">タイムラインを同期中…</string>
    <string name="syncing_mentions">/@ ツイートを同期中…</string>
    <string name="syncing_direct_messages">メッセージを同期中…</string>
    <string name="syncing_user">フォローユーザーを同期中…</string>
    <string name="done_syncing">同期完了</string>
    <string name="login_error">同期失敗… もう一度してください!\n\n端末の時刻設定が合っていない可能性があります。サードパーティクライアントがAPIを使う場合は時刻設定が合っていないといけません。</string>
    <string name="no_network">インターネットに接続されていません</string>
    <string name="no_thanks">あとで</string>
    <string name="follow_me">フォロー！</string>
    <string name="follow_me_description">サポートアカウントをフォローする場合はチェックボタンを押してください。
スキップする場合は戻るボタンを押してください</string>
    <string name="compose_activity">新規ツイート</string>
    <string name="compose_tweet_hint">ツイートを入力…</string>
    <string name="send_to">ユーザー名を入力…</string>
    <string name="direct_message_sent">メッセージが送信されました</string>
    <string name="type_user">ユーザーを入力</string>
    <string name="add_user">ユーザーを追加</string>
    <string name="location_connected">位置情報を追加しました</string>
    <string name="location_disconnected">位置情報を削除しました</string>
    <string name="finding_location">位置情報を取得中</string>
    <string name="draft_found">下書きがあります</string>
    <string name="apply">使用しますか？</string>
    <string name="tweet_failed">ツイート送信エラー</string>
    <string name="tap_to_retry">タップして再試行</string>
    <string name="one_recepient">メッセージを送れるのは同時に 1 人だけです！</string>
    <string name="discard">破棄</string>
    <string name="send">送信</string>
    <string name="placeholder">プレイスホルダー</string>
    <string name="reply">返信…</string>
    <string name="error">エラー</string>
    <string name="error_loading_page">ページ読み込みエラー</string>
    <string name="delete">削除</string>
    <string name="cancel">キャンセル</string>
    <string name="delete_direct_message">メッセージを削除しますか？</string>
    <string name="save_image">画像が保存されました</string>
    <string name="tweet_success">ツイート成功</string>
    <string name="error_sending_tweet">ツイート送信エラー</string>
    <string name="tweet_to_long">ツイートが長すぎます！</string>
    <string name="ok">OK</string>
    <string name="no">いいえ</string>
    <string name="yes">はい</string>
    <string name="changelog">更新履歴</string>
    <string name="created_by">作成者:</string>
    <string name="no_location">位置情報が見つかりませんでした</string>
    <string name="take_picture">写真を撮影</string>
    <string name="from_file">画像を添付</string>
    <string name="via">via</string>
    <string name="version">バージョン</string>
    <string name="from">From</string>
    <string name="save">保存</string>
    <string name="stop">停止</string>
    <string name="tweeted">ツイートしました</string>
    <string name="followers">フォロワー</string>
    <string name="following">フォロー中</string>
    <string name="blocked_user">ブロックしました</string>
    <string name="unblocked_user">ブロック解除しました</string>
    <string name="followed_user">フォローしました</string>
    <string name="unfollowed_user">フォロー解除しました</string>
    <string name="no_description">自己紹介がありません</string>
    <string name="favorite_user">お気に入りしました</string>
    <string name="unfavorite_user">お気に入り解除しました</string>
    <string name="updating_pro_pic">プロフィール画像を更新中</string>
    <string name="updating_banner_pic">ヘッダー画像を更新中</string>
    <string name="uploaded">ファイルがアップロードされました</string>
    <string name="change_profile_info">プロフィール情報を変更</string>
    <string name="update">更新</string>
    <string name="optional_name">名前 (任意)</string>
    <string name="optional_url">URL (任意)</string>
    <string name="optional_location">場所 (任意)</string>
    <string name="optional_description">説明文 (任意)</string>
    <string name="updated_profile">プロフィールを更新しました</string>
    <string name="name_char_length">名前: 20 文字まで</string>
    <string name="url_char_length">URL: 100 文字まで</string>
    <string name="location_char_length">場所: 30 文字まで</string>
    <string name="description_char_length">説明文: 160 文字まで</string>
    <string name="retweets_lower">リツイート</string>
    <string name="retweet_lower">リツイート</string>
    <string name="retweeter">リツイート by /@</string>
    <string name="menu_open_web">Web リンクを開く</string>
    <string name="menu_copy_text">ツイートテキストをコピー</string>
    <string name="menu_share">ツイートを共有</string>
    <string name="menu_delete_tweet">ツイートを削除</string>
    <string name="conversation">会話</string>
    <string name="webpage">Web ページ</string>
    <string name="tweet_youtube">YouTube</string>
    <string name="gif">画像/動画をツイート</string>
    <string name="vine">Vine</string>
    <string name="menu_quote">ツイートを引用</string>
    <string name="deleted_tweet">ツイートが削除されました</string>
    <string name="error_deleting">ツイート削除エラー</string>
    <string name="sending">送信中</string>
    <string name="open_what">何を開きますか</string>
    <string name="youtube_error">動画再生エラー</string>
    <string name="no_conversation">これより前のツイートなし</string>
    <string name="saving_picture">画像を保存中</string>
    <string name="saved_picture">画像の保存に成功</string>
    <string name="retweet_success">リツイート成功</string>
    <string name="favorite_success">いいね成功</string>
    <string name="success">成功</string>
    <string name="view_users">ユーザーを表示</string>
    <string name="delete_list">リストを削除</string>
    <string name="remove_user">ユーザーを削除</string>
    <string name="remove">リストから</string>
    <string name="from_list">さんを削除しますか</string>
    <string name="removed_user">ユーザーを削除しました</string>
    <string name="create_new_list">新しいリストを作成</string>
    <string name="list_name">リストの名前…</string>
    <string name="list_description">リストの説明 (任意)…</string>
    <string name="deleted_list">リストを削除しました</string>
    <string name="back_to_refresh">戻ってリストを更新</string>
    <string name="sPrivate">非公開</string>
    <string name="sPublic">公開</string>
    <string name="finding_lists">リスト取得中…</string>
    <string name="choose_list">リストを選択</string>
    <string name="added_to_list">リストに追加しました</string>
    <string name="title_video">ビデオ</string>
    <string name="use_only_japanese">日本語のみ</string>
    <string name="search_absolute">検索（完全一致）</string>
    <string name="title_search_setting">検索設定</string>
</resources>