<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group android:checkableBehavior="single"
       >
        <item
            android:id="@+id/my_profile"
            android:icon="@drawable/ic_account_circle_grey_400_36dp"
            android:title="@string/my_profile" />
        <item
            android:id="@+id/action_account"
            android:icon="@drawable/ic_contacts_grey_400_36dp"
            android:title="@string/account" />
    </group>
    <group android:checkableBehavior="single"
       >
        <item
            android:id="@+id/action_setting"
            android:icon="@drawable/ic_settings_grey_400_36dp"
            android:title="@string/setting" />
        <item
            android:id="@+id/action_help"
            android:icon="@drawable/ic_help_outline_grey_400_36dp"
            android:title="@string/whats_this_app" />
    </group>
</menu>
