<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:app="http://schemas.android.com/apk/res-auto"
  xmlns:tools="http://schemas.android.com/tools"
  android:layout_width="match_parent"
  android:layout_height="match_parent">
  <android.support.design.widget.TextInputLayout
    android:id="@+id/textInputLayout"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginTop="8dp"
    android:layout_marginStart="8dp"
    android:layout_marginEnd="8dp"
    android:hint="@string/search"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintHorizontal_bias="0.0"
    app:layout_constraintLeft_toLeftOf="parent"
    app:layout_constraintRight_toRightOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toBottomOf="@+id/textView2">

    <android.support.text.emoji.widget.EmojiEditText
      android:id="@+id/search_setting_query"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:layout_gravity="center_horizontal"
      android:imeOptions="actionSearch"
      android:inputType="text"
      android:nextFocusRight="@id/search_setting_query_absolute"
      />
  </android.support.design.widget.TextInputLayout>

  <android.support.design.widget.TextInputLayout
    android:id="@+id/textInputLayout2"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginTop="8dp"
    android:layout_marginStart="8dp"
    android:layout_marginEnd="8dp"
    android:hint="@string/search_absolute"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toBottomOf="@+id/textInputLayout">

    <android.support.text.emoji.widget.EmojiEditText
      android:id="@+id/search_setting_query_absolute"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:layout_gravity="center_horizontal"
      android:imeOptions="actionSearch"
      android:inputType="text"
      android:nextFocusRight="@id/search_setting_from"
      />
  </android.support.design.widget.TextInputLayout>


  <android.support.v7.widget.LinearLayoutCompat
    android:id="@+id/linearLayout5"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginTop="8dp"
    android:layout_marginStart="8dp"
    android:layout_marginEnd="8dp"
    android:orientation="horizontal"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintLeft_toLeftOf="parent"
    app:layout_constraintRight_toRightOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toBottomOf="@+id/textInputLayout2"
    tools:layout_height="40dp">
    <android.support.design.widget.TextInputLayout
      android:layout_width="0dp"
      android:layout_height="wrap_content"
      android:layout_weight="1"
      android:hint="～からのリプライ">
      <android.support.v7.widget.AppCompatEditText
        android:id="@+id/search_setting_from"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:maxLines="1"
        android:nextFocusRight="@id/search_setting_to"/>
    </android.support.design.widget.TextInputLayout>
    <android.support.design.widget.TextInputLayout
      android:layout_width="0dp"
      android:layout_height="wrap_content"
      android:layout_weight="1"
      android:hint="～へのリプライ">
      <android.support.v7.widget.AppCompatEditText
        android:id="@+id/search_setting_to"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:maxLines="1"/>
    </android.support.design.widget.TextInputLayout>
  </android.support.v7.widget.LinearLayoutCompat>
  <android.support.v7.widget.LinearLayoutCompat
    android:id="@+id/linearLayoutCompat2"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginTop="8dp"
    android:layout_marginStart="8dp"
    android:layout_marginEnd="8dp"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toBottomOf="@+id/linearLayout5"
    tools:layout_height="40dp">

    <android.support.v7.widget.AppCompatTextView
      android:id="@+id/day_from"
      android:layout_width="0dp"
      android:layout_height="wrap_content"
      android:layout_weight="1"
      android:hint="～日から"
      android:textAppearance="?android:attr/textAppearanceLarge"
      android:textSize="18sp"/>

    <android.support.v7.widget.AppCompatTextView
      android:id="@+id/day_to"
      android:layout_width="0dp"
      android:layout_height="wrap_content"
      android:layout_weight="1"
      android:hint="~日まで"
      android:textAppearance="?android:attr/textAppearanceLarge"
      android:textSize="18sp"/>

  </android.support.v7.widget.LinearLayoutCompat>

  <android.support.v7.widget.LinearLayoutCompat
    android:id="@+id/linearLayoutCompat"
    android:layout_width="0dp"
    android:layout_height="wrap_content"
    android:layout_marginTop="8dp"
    android:gravity="center"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintHorizontal_bias="0.0"
    app:layout_constraintLeft_toLeftOf="parent"
    app:layout_constraintRight_toRightOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toBottomOf="@+id/linearLayoutCompat2"
    tools:layout_height="40dp">

    <CheckBox
      android:id="@+id/search_setting_only_japanese"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_marginStart="4dp"
      android:layout_marginEnd="4dp"
      android:text="@string/use_only_japanese"/>

    <CheckBox
      android:id="@+id/search_setting_links"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_marginStart="4dp"
      android:layout_marginEnd="4dp"
      android:text="@string/links"/>

    <CheckBox
      android:id="@+id/search_setting_image"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_marginStart="4dp"
      android:layout_marginEnd="4dp"
      android:text="@string/pictures"/>

    <CheckBox
      android:id="@+id/search_setting_video"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_marginStart="4dp"
      android:layout_marginEnd="4dp"
      android:text="@string/title_video"/>
  </android.support.v7.widget.LinearLayoutCompat>

  <TextView
    android:id="@+id/textView2"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_marginTop="8dp"
    android:layout_marginEnd="8dp"
    android:layout_marginLeft="16dp"
    android:text="複数指定は半角スペースを使用してください。"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintLeft_toLeftOf="parent"
    app:layout_constraintTop_toTopOf="parent"/>

  <Button
    android:id="@+id/bt_search"
    android:layout_width="0dp"
    android:layout_height="wrap_content"
    android:layout_marginTop="8dp"
    android:layout_marginStart="8dp"
    android:layout_marginEnd="8dp"
    android:text="決定"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintLeft_toLeftOf="parent"
    app:layout_constraintRight_toRightOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toBottomOf="@+id/linearLayoutCompat"/>


</android.support.constraint.ConstraintLayout>
